--- a/trunk/source/org.eclipse.ve.jfc/plugin.properties
+++ b/trunk/source/org.eclipse.ve.jfc/plugin.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.jfc/plugin.properties,v $
-# $Revision: 1.4 $  $Date: 2004-03-05 18:14:30 $
+# $Revision: 1.5 $  $Date: 2004-06-10 15:08:11 $
 #
 
 
@@ -27,16 +27,27 @@ PopupMenus.HideGridAction.Label    = Hide Grid
 Swing                              = Swing
 AWT                                = AWT
 Visual.Class.JFrame.Name                = JFrame Visual Class
-Visual.Class.JFrame.Desc                = JFrame class edited with the Visual Editor for Java
+Visual.Class.JFrame.Desc                = Create a JFrame Visual Class
 Visual.Class.JPanel.Name                = JPanel Visual Class
-Visual.Class.JPanel.Desc                = JPanel class edited with the Visual Editor for Java
+Visual.Class.JPanel.Desc                = Create a JPanel Visual Class
 Visual.Class.JApplet.Name               = JApplet Visual Class
-Visual.Class.JApplet.Desc               = JApplet class edited with the Visual Editor for Java
+Visual.Class.JApplet.Desc               = Create a JApplet Visual Class
 Visual.Class.Frame.Name                 = Frame Visual Class
-Visual.Class.Frame.Desc                 = Frame class edited with the Visual Editor for Java
+Visual.Class.Frame.Desc                 = Create a Frame Visual Class
 Visual.Class.Panel.Name                 = Panel Visual Class
-Visual.Class.Panel.Desc                 = Panel class edited with the Visual Editor for Java
+Visual.Class.Panel.Desc                 = Create a Panel Visual Class
 Visual.Class.Applet.Name                = Applet Visual Class
-Visual.Class.Applet.Desc                = Applet class edited with the Visual Editor for Java
+Visual.Class.Applet.Desc                = Create a Applet Visual Class
 Example.AWT.SWING                       = AWT/Swing
-example.label                           = Example of a Visual Class built using the Visual Editor
+example.label                           = Create an example Java Visual Class
+
+Visual.Class.JFrame.Contrib.Name        =  JFrame
+Visual.Class.JPanel.Contrib.Name        =  JPanel
+Visual.Class.JApplet.Contrib.Name        =  JApplet
+Visual.Class.JDialog.Contrib.Name        =  JDialog
+Visual.Class.JDialog.Contrib.Desc        =  Create a JDialog Visual Class
+Visual.Class.Frame.Contrib.Name        =  Frame
+Visual.Class.Panel.Contrib.Name        =  Panel
+Visual.Class.Applet.Contrib.Name        =  Applet
+Visual.Class.Dialog.Contrib.Name        =  Dialog
+Visual.Class.Dialog.Contrib.Desc        =  Create a Dialog Visual Class
