--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/plugin.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/plugin.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/plugin.properties,v $
-# $Revision: 1.5 $  $Date: 2004-06-10 15:08:11 $
+# $Revision: 1.6 $  $Date: 2004-06-10 15:34:42 $
 #
 
 
@@ -51,3 +51,10 @@ Visual.Class.Panel.Contrib.Name        =  Panel
 Visual.Class.Applet.Contrib.Name        =  Applet
 Visual.Class.Dialog.Contrib.Name        =  Dialog
 Visual.Class.Dialog.Contrib.Desc        =  Create a Dialog Visual Class
+
+Example.SimpleTextEditor.Desc = Create a Java visual class that includes a file chooser and a basic text editor using Swing components.
+Example.SliderGame.Desc = Create a Java visual class for a puzzle game that counts the number of moves it takes to put the pieces in order.
+Example.ToDoList.Desc = Create a Java visual class that allows you to add items to a to-do list.
+Example.BasicSwingComponents.Desc = Create a Java visual class that shows basic Swing components in the visual editor.
+Example.AWTComponents.Desc = Create a Java visual class that shows basic AWT components in the visual editor.
+Example.MoreSwingComponents.Desc = Create a Java visual class that shows Swing components in the visual editor.
