--- a/source/org.eclipse.ve-feature/org.eclipse.ve.sdk/about.properties
+++ b/source/org.eclipse.ve-feature/org.eclipse.ve.sdk/about.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# (c) Copyright Eclipse contributors and others. 2000, 2004.
+# Copyright (c) 2003 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials 
 # are made available under the terms of the Common Public License v1.0
 # which accompanies this distribution, and is available at
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve-feature/org.eclipse.ve.sdk/about.properties,v $
-# $Revision: 1.2 $  $Date: 2004-06-07 18:35:55 $
+# $Revision: 1.3 $  $Date: 2004-06-11 15:13:10 $
 #
 
 
@@ -25,5 +25,5 @@ blurb=Visual Editor SDK\n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
-(c) Copyright IBM Corp. and others 2003.  All rights reserved.\n\
+(c) Copyright Eclipse contributors and others. 2000, 2004.  All rights reserved.\n\
 Visit http://www.eclipse.org/vep
